# Aviation-Photo-Viewer

./: .gitignore  .photo_viewer_meta.json  Cargo.toml  Containerfile  Containerfile.windows  README.md  build.rs  package.json  photo-viewer-pod.yaml
.github/workflows/: build-and-push-ghcr.yml  cleanup-ghcr.yml
src/: cache_paths.rs  exif.rs  exif_edit.rs  file_ops.rs  handlers.rs  hash.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
static/: index.html
static/css/: base.css  compare.css  gallery.css  modals.css  responsive.css  styles.css  viewer.css
static/js/: api.js  compare.js  events.js  exif-edit.js  file-ops.js  main.js  preferences.js  render.js  router.js  selection.js  state.js  theme.js  utils.js  viewer.js
