[package]
name = "photo-viewer"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "photo-viewer"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
axum-server     = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls          = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio           = { version = "1", features = ["full"] }
tower-http      = { version = "0.5", features = ["cors"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
exif            = { package = "kamadak-exif", version = "0.6" }
walkdir         = "2"
image           = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
mime_guess      = "2"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2            = "0.10"
img_hash        = "2.0"
uuid            = { version = "1", features = ["v4"] }
hex             = "0.4"
bytes           = "1"
rayon           = "1.7"
rust-embed      = "8"

[profile.release]
opt-level = 3
lto       = true
strip     = true
